tests/snapshots/run_file__pred.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/pred.bend
---
NumScott:
2

Scott:
2
