tests/snapshots/run_file__pred.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/pred.hvm
---
Lazy mode:
2

Strict mode:
2
