tests/snapshots/run_file__queue.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/queue.hvm
---
λa λ* (a 1 λb λ* (b 2 λc λ* (c 3 λ* λd d)))
