tests/snapshots/run_file__radix_sort_ctr.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/radix_sort_ctr.bend
---
NumScott:
120

Scott:
120
