tests/snapshots/run_file__readback_hvm1_main.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/readback_hvm1_main.bend
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mMain[0m[1m':[0m
  Main definition can't be referenced inside the program.
