tests/snapshots/run_file__readback_hvm1_main.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/readback_hvm1_main.hvm
---
Lazy mode:

In definition 'Main':
  Main definition can't be referenced inside the program.



Strict mode:

In definition 'Main':
  Main definition can't be referenced inside the program.
