tests/snapshots/run_file__readback_hvm2_main.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/readback_hvm2_main.hvm
---
λ* main
