tests/snapshots/run_file__readback_list_other_ctr.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/readback_list_other_ctr.bend
---
NumScott:
λa (a 1 λb (b 1 97 λc (c 0 98 "c")) λe (e 1 1 λf (f 0 2 [3, 4])))

Scott:
λ* λa (a λ* λb (b 97 λc (c 98 "c")) λ* λe (e 1 λf (f 2 [3, 4])))
